Sketch out sections for Linux, Terraform and Jenkins

--- a/src/main.tex
+++ b/src/main.tex
@@ -46,8 +46,86 @@
 
     \chapter{Linux}
 
+    %--------Sketch out chapters
 
-    \section{Basic CLI}
+
+    \chapter{Bash CLI}
+
+    \subsubsection{First Steps in the Terminal}
+
+    \subsubsection{First Steps with Linux}
+
+    \subsubsection{File Management pt1 - Organised Files and directories}
+
+    \subsubsection{File Management pt2 - Handle text files}
+
+    \subsubsection{Redirection - Mangage Data Streams}
+
+    \subsubsection{Data processing through command chaining}
+
+    \subsubsection{environment variables, manage shell configuration}
+
+    \subsubsection{Create a cuustom bash prompt}
+
+    \subsubsection{How commands are parsed}
+
+
+    \chapter{Linux}
+
+    \subsubsection{Everything is file concept}
+
+    \subsubsection{Linux user management groups, permissions and access control}
+
+    \subsubsection{Linux orchestrate system operations}
+
+    \subsubsection{Job control in bash}
+
+    \subsubsection{Package management}
+
+    \subsubsection{Package management CentOS}
+
+    \subsubsection{System Boot Processes and SystemMd}
+
+    \subsubsection{Volumes partitions and mounts}
+
+    \subsubsection{logical volume manager}
+
+    \subsubsection{Sfotware upgrade and trouble shooting}
+
+    \subsubsection{Cron jobs, automate and execute tasks}
+
+    \subsubsection{Networking - Arrange and manage linux communication channels}
+
+    \subsubsection{SSH}
+
+    \subsubsection{Setting up a webserver}
+
+    \subsubsection{Control firewall traffic}
+
+    \subsubsection{SELinux - Robust access control}
+
+    \subsubsection{Other linux distributesion}
+
+
+    \chapter{Bash Scripting}
+
+    \subsubsection{Bash Scripting Basics pt 1}
+    \subsubsection{Bash Scripting Basiss pt 2}
+    \subsubsection{Numeric Variables and Arithmetic Operations}
+    \subsubsection{Access External Data - Retrieve JSON data from APIs}
+    \subsubsection{Test and the if clause etc}
+    \subsubsection{While loops}
+    \subsubsection{For loops}
+    \subsubsection{Demo automted thumbnail generation}
+    \subsubsection{USer interaction with "select" etc.....}
+    \subsubsection{Arguments in Bash - Process Command LIne Input with Scripts}
+    \subsubsection{Functions - Write Well structured scripts}
+    \subsubsection{Arrays in Bash - Manage and Manipulate Data Collections}
+    \subsubsection{Project - Build a Backup Script with Archiving and Compressions}
+    \subsubsection{Effective Data Filtering with grep and Regular expressions}
+    \subsubsection{Reliable file fetching}
+    \subsubsection{The depths of bash}
+    \subsubsection{Customise CLI}
 
     Notes on Linux, focus on the stuff beyond the basics.
 
@@ -103,6 +181,35 @@
 
     \chapter{CI/CD stuff}
 
+
+    \section{Terraform}
+
+    \paragraph{Motivations} Provision AWS infrastructure programmatically.
+
+    \subsection{Intoduction to Infrastrcutre as Code}
+    \subsection{Getting Started with Terraform}
+    \subsection{Terraform Basics}
+    \subsection{Terraform State}
+    \subsection{Working with Terraform}
+    \subsection{Terraform with AWS}
+    \subsection{Remote State}
+    \subsection{Terraform Provisioners}
+    \subsection{Terraform Import, Tainting, Resources and Debugging}
+    \subsection{Terraform Modules}
+    \subsection{Terraform Funtions and Conditional Expressions}
+
+    \section{Terraform: AWS Infrastructure as Code}
+    \subsection{Introduction to terraform}
+    \subsection{Terraform Basics}
+    \subsection{Terraform with AWS}
+    \subsection{Advanced Terraform Usage}
+    \subsection{Packer}
+    \subsection{Docker on AWS using ECS and ECR}
+    \subsection{Module Development}
+    \subsection{Advanced Module Development}
+    \subsection{AWS CodePipeline (Contiuous Delivery / Deployments)}
+    \subsection{HashiCorp Certificatoin....}
+    \subsection{Cloud Development Kit for Terraform}
 
     \section{Git}
 
@@ -223,6 +330,20 @@
 
 
     \section{Jenkins}
+
+    \subsection{Getting Started with Jenkins}
+    \subsection{Jenkins and Docker}
+    \subsection{Jenkins and AWS}
+    \subsection{Jenkins and Ansible}
+    \subsection{Jenkins and Security}
+    \subsection{Jenkins Tips and Tricks}
+    \subsection{Jenkins and Email}
+    \subsection{Jenkins and Maven}
+    \subsection{Jenkins and Git}
+    \subsection{Jenkins and DSL}
+    \subsection{CI/CD Defintions}
+    \subsection{Jenkins Pipeline - Jenkinsfile}
+    \subsection{CI/CD + Jenkins Pipeline + Docker + Maven}
 
     \subsection{Manually using Jenkins}
     Hmmmm......
