Add missing info to section

--- a/src/main.tex
+++ b/src/main.tex
@@ -324,9 +324,8 @@
 
     \subsection{Deployment to a Kubernetes cluster}
     Make sure image is hosted on docker hub
-    Make one config file to create the container
-    Make one config file to create the container
-
+    Make one config file to create the container or something that is essentially going to repsent the container.
+    Need a second config file to set up some networking and make sure that our container, created during this step is accessible from our web browser.
 
 
     \section{Jenkins}
