Correct cheat sheet title

--- a/src/git_cheat_sheet.tex
+++ b/src/git_cheat_sheet.tex
@@ -21,7 +21,7 @@
     showstringspaces=false
 }
 
-\title{\textbf{Comprehensive A-Z Git Cheat Sheet}}
+\title{\textbf{Git Cheat Sheet}}
 \author{}
 \date{\today}
 
